--- a/Calculator Project.csproj
+++ b/Calculator Project.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GameOVer.cs" />
     <Compile Include="Assets\NewBehaviourScript.cs" />
     <Compile Include="Assets\calculatorLogic.cs" />
   </ItemGroup>
